--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -48,10 +48,6 @@ body {
   }
 }
 
-.invalid-feedback {
-  display: block;
-}
-
-input.invalid {
-  border-color: #dc3545;
+.btn-refresh {
+  margin-bottom: 15px;
 }
