--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -16,7 +16,7 @@ body {
 .loader {
   position: absolute;
   left: 50%;
-  top: 120px;
+  top: 50%;
   z-index: 1;
   width: 150px;
   height: 150px;
