--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -30,6 +30,14 @@ body {
   animation: spin 2s linear infinite;
 }
 
+.width-50 {
+  max-width: 50%;
+}
+
+.one-line {
+  display: inline-block;
+}
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
